// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News list news list initialized should match snapshot 1`] = `
<div
  className="news__list"
/>
`;

exports[`News list news list item should match snapshot 1`] = `
<NewsListItem
  item={
    Object {
      "item": [Function],
    }
  }
/>
`;

exports[`News list news list loaded list should match snapshot 1`] = `
<div
  className="news__list"
>
  <div>
    <div
      className="news__list-title"
    >
      news
    </div>
    <List
      bordered={false}
      dataSource={
        Array [
          Object {
            "_id": "test",
            "date": "test",
            "details": "test",
            "headline": "test",
          },
        ]
      }
      itemLayout="vertical"
      loading={false}
      pagination={false}
      prefixCls="ant-list"
      renderItem={[Function]}
      size="large"
      split={true}
    />
    <Pagination
      className="news__list-pagination"
      current={1}
      hideOnSinglePage={true}
      onChange={[Function]}
      pageSize={5}
      prefixCls="ant-pagination"
      selectPrefixCls="ant-select"
      total={1}
    />
  </div>
</div>
`;

exports[`News list news list loaded with errors should match snapshot 1`] = `
<div
  className="news__list"
>
  <Loading
    error={true}
    message="There was an error retrieving the news"
    pastDelay={true}
  />
</div>
`;

exports[`News list news list loading should match snapshot 1`] = `
<div
  className="news__list"
>
  <Loading
    error={false}
    message="There was an error loading this component"
    pastDelay={true}
  />
</div>
`;
